force-app/main/default/objects/InsurancePortalSubmission__c/InsurancePortalSubmission__c.object-meta.xml
<CustomObject>
    <label>Insurance Portal Submission</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Insurance Portal Submissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Portal Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>