force-app/main/default/objects/InsurancePortalSubmission__c/fields/AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalComments__c</fullName>
    <label>Additional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>