force-app/main/default/objects/InsurancePortalSubmission__c/fields/AuthorizedRepresentative__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedRepresentative__c</fullName>
    <label>Authorized Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>