force-app/main/default/objects/InsurancePortalSubmission__c/fields/AuthorizedRepresentativeFormula__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedRepresentativeFormula__c</fullName>
    <formula>If(IsBlank(PVLPortalUser__c),

AuthorizedRepresentative__c ,
(
If(IsBlank(PVLPortalUser__r.First_Name__c),&apos;&apos;, PVLPortalUser__r.First_Name__c+ &apos; &apos; ) +
If(IsBlank(PVLPortalUser__r.MiddleName__c), &apos;&apos;, PVLPortalUser__r.MiddleName__c+ &apos; &apos; ) + PVLPortalUser__r.Last_Name__c
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Representative Formula</label>
    <type>Text</type>
</CustomField>