force-app/main/default/objects/InsurancePortalSubmission__c/fields/BoardProgramName__c.field-meta.xml
<CustomField>
    <fullName>BoardProgramName__c</fullName>
    <description>Pacific-AZ20210226-12262</description>
    <formula>License__r.LicenseType__r.BoardProgram__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board / Program Name</label>
    <type>Text</type>
</CustomField>