force-app/main/default/objects/InsurancePortalSubmission__c/fields/CertificateLink__c.field-meta.xml
<CustomField>
    <fullName>CertificateLink__c</fullName>
    <description>PVL PACIFIC-AZ20210203-12266</description>
    <formula>&quot;https://hi-dcca.my.salesforce-sites.com/pmtx/CertificateOfInsurance?id=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Link</label>
    <type>Text</type>
</CustomField>