force-app/main/default/objects/InsurancePortalSubmission__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>Pacific-AZ20210226-12262</description>
    <formula>Text(PVLPortalUser__r.EntityId__c)</formula>
    <label>Entity Id</label>
    <type>Text</type>
</CustomField>