force-app/main/default/objects/InsurancePortalSubmission__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>InsuranceBond__c</referenceTo>
    <relationshipLabel>Insurance Portal Submissions</relationshipLabel>
    <relationshipName>Insurance_Portal_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>