force-app/main/default/objects/InsurancePortalSubmission__c/fields/InsurerAffordingCoverage__c.field-meta.xml
<CustomField>
    <fullName>InsurerAffordingCoverage__c</fullName>
    <label>Insurer Affording Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>