force-app/main/default/objects/InsurancePortalSubmission__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Insurance Portal Submissions</relationshipLabel>
    <relationshipName>Insurance_Portal_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>