force-app/main/default/objects/InsurancePortalSubmission__c/fields/LicenseeName__c.field-meta.xml
<CustomField>
    <fullName>LicenseeName__c</fullName>
    <description>Pacific-AZ20210226-12262</description>
    <formula>License__r.LicenseeNameFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensee Name</label>
    <type>Text</type>
</CustomField>