force-app/main/default/objects/InsurancePortalSubmission__c/fields/LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber__c</fullName>
    <description>Pacific-AZ20210226-12262</description>
    <formula>Text(PVLPortalUser__r.LicenseNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Number</label>
    <type>Text</type>
</CustomField>