force-app/main/default/objects/InsurancePortalSubmission__c/fields/LicenseTypePrefix__c.field-meta.xml
<CustomField>
    <fullName>LicenseTypePrefix__c</fullName>
    <description>Pacific-AZ20210226-12262</description>
    <formula>License__r.LicenseType__r.LicensePrefix__c</formula>
    <label>License Type Prefix</label>
    <type>Text</type>
</CustomField>