force-app/main/default/objects/InsurancePortalSubmission__c/fields/LimitEachOccurrence__c.field-meta.xml
<CustomField>
    <fullName>LimitEachOccurrence__c</fullName>
    <label>Limit Each Occurrence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>