force-app/main/default/objects/InsurancePortalSubmission__c/fields/NonLicensedInsurerSubmittal_Approved__c.field-meta.xml
<CustomField>
    <fullName>NonLicensedInsurerSubmittal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Licensed Insurer Submittal Approved</label>
    <type>Checkbox</type>
</CustomField>