force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyCancellationDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyCancellationDate__c</fullName>
    <formula>DATEVALUE(PolicyCancellationDateYear__c &amp; &quot;-&quot; &amp; PolicyCancellationDateMonth__c &amp; &quot;-&quot; &amp; PolicyCancellationDateDay__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Cancellation Date</label>
    <type>Date</type>
</CustomField>