force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyCancellationDateDay__c.field-meta.xml
<CustomField>
    <fullName>PolicyCancellationDateDay__c</fullName>
    <label>Policy Cancellation Date Day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>