force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyCancellationDateMonth__c.field-meta.xml
<CustomField>
    <fullName>PolicyCancellationDateMonth__c</fullName>
    <label>Policy Cancellation Date Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>