force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyCancellationDateYear__c.field-meta.xml
<CustomField>
    <fullName>PolicyCancellationDateYear__c</fullName>
    <label>Policy Cancellation Date Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>