force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyEffectiveDate__c</fullName>
    <formula>DATEVALUE(PolicyEffectiveDateYear__c &amp; &quot;-&quot; &amp; PolicyEffectiveDateMonth__c &amp; &quot;-&quot; &amp; PolicyEffectiveDateDay__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Effective Date</label>
    <type>Date</type>
</CustomField>