force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyEffectiveDateDay__c.field-meta.xml
<CustomField>
    <fullName>PolicyEffectiveDateDay__c</fullName>
    <label>Policy Effective Date Day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>