force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyEffectiveDateMonth__c.field-meta.xml
<CustomField>
    <fullName>PolicyEffectiveDateMonth__c</fullName>
    <label>Policy Effective Date Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>