force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyEffectiveDateYear__c.field-meta.xml
<CustomField>
    <fullName>PolicyEffectiveDateYear__c</fullName>
    <label>Policy Effective Date Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>