force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyExpirationDate__c</fullName>
    <formula>DATEVALUE(PolicyExpirationDateYear__c &amp; &quot;-&quot; &amp; PolicyExpirationDateMonth__c &amp; &quot;-&quot; &amp; PolicyExpirationDateDay__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Expiration Date</label>
    <type>Date</type>
</CustomField>