force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyExpirationDateDay__c.field-meta.xml
<CustomField>
    <fullName>PolicyExpirationDateDay__c</fullName>
    <label>Policy Expiration Date Day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>