force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyExpirationDateMonth__c.field-meta.xml
<CustomField>
    <fullName>PolicyExpirationDateMonth__c</fullName>
    <label>Policy Expiration Date Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>