force-app/main/default/objects/InsurancePortalSubmission__c/fields/PolicyExpirationDateYear__c.field-meta.xml
<CustomField>
    <fullName>PolicyExpirationDateYear__c</fullName>
    <label>Policy Expiration Date Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>