force-app/main/default/objects/InsurancePortalSubmission__c/fields/PVLLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>PVLLicenseNumber__c</fullName>
    <label>PVL License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>