force-app/main/default/objects/InsurancePortalSubmission__c/fields/PVLLicenseType__c.field-meta.xml
<CustomField>
    <fullName>PVLLicenseType__c</fullName>
    <label>PVL License Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>