force-app/main/default/objects/InsurancePortalSubmission__c/fields/PVLPortalUser__c.field-meta.xml
<CustomField>
    <fullName>PVLPortalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PVL Portal User</label>
    <referenceTo>PVL_Portal_User__c</referenceTo>
    <relationshipLabel>Insurance Portal Submissions</relationshipLabel>
    <relationshipName>Insurance_Portal_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>