force-app/main/default/objects/InsurancePortalSubmission__c/fields/SubmitterType__c.field-meta.xml
<CustomField>
    <fullName>SubmitterType__c</fullName>
    <label>Submitter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensed Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Not Admitted Insurer or Leasing Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>