force-app/main/default/objects/InsurancePortalSubmission__c/validationRules/PolicyEffectiveAndCanDateIfNonLiCB.validationRule-meta.xml
<ValidationRule>
    <fullName>PolicyEffectiveAndCanDateIfNonLiCB</fullName>
    <active>true</active>
    <description>PacPoint-JK13042022- Case 21146</description>
    <errorConditionFormula>AND(
 NonLicensedInsurerSubmittal_Approved__c = true,
 TransactionType__c = &apos;CANC&apos;,
OR(
   ISBLANK( PolicyEffectiveDateDay__c ) ,
   ISBLANK( PolicyEffectiveDateMonth__c ) ,
   ISBLANK( PolicyEffectiveDateYear__c ) ,
   ISBLANK( PolicyCancellationDateDay__c  ) ,
   ISBLANK( PolicyCancellationDateMonth__c  ) ,
   ISBLANK( PolicyCancellationDateYear__c  ) 
)
)</errorConditionFormula>
    <errorMessage>For Non Licensed Insurer approvals on Cancellation transactions, you must populate the Policy Effective Date and the Policy Cancellation Date</errorMessage>
</ValidationRule>